--- a/resource_monitoring/resource_monitoring.ipynb
+++ b/resource_monitoring/resource_monitoring.ipynb
@@ -188,7 +188,7 @@
     "            if not process[\"name\"] in APPLY_PROCESS_NAMES or process[\"pid\"] == os.getpid():\n",
     "                continue\n",
     "            process[f\"memory pss {UNITS_INFO[UNITS]['name']}\"] =\\\n",
-    "                proc.memory_full_info().uss / UNITS_INFO[UNITS]['divider']\n",
+    "                proc.memory_full_info().pss / UNITS_INFO[UNITS]['divider']\n",
     "            process[\"cpu_percent\"] = proc.cpu_percent(interval=1)\n",
     "            process[\"cmdline\"] = \" \".join(proc.cmdline())\n",
     "            processes.append(process)\n",
